--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-    "name": "api",
+  "name": "api",
+  "engines" : { 
+    "npm" : ">=8.13.2",
+    "node" : ">=18.0.0"
+  },
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
