--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-NAME = root
-HOST=localhost
-PASSWORD=elseveremirli2006.
-DATABASE=react(esas)
-PORT = 3002
+NAME = b5ed560acf9a93
+HOST=eu-cdbr-west-03.cleardb.net
+PASSWORD=3a5360c5
+DATABASE=heroku_386f5da92ab81d8
+
+
