--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NAME = b5ed560acf9a93
-HOST=eu-cdbr-west-03.cleardb.net
-PASSWORD=3a5360c5
-DATABASE=heroku_386f5da92ab81d8
+HOST= eu-cdbr-west-03.cleardb.net
+PASSWORD= 3a5360c5
+DATABASE= heroku_386f5da92ab81d8
 
 
