--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "homepage": "https://elsever-blog.herokuapp.com",
+  "homepage": "https://myapp.herokuapp.com/",
   "scripts": {
     "start": "node app.js",
     "heroku-postbuild": "cd client && npm install && npm run build"
